<resources>
    <string name="app_name">Story App</string>

    <string name="onboarding_title">Welcome to Dicoding Story App</string>
    <string name="onboarding_text">Share your adventure to fellow dicoding programmers. Web Development? Mobile Development? You can share anything! even pictures of your cats…</string>
    <string name="explore">Explore</string>

    <string name="login">Login</string>
    <string name="register_here"><u>Don\'t have an account yet? Register here!</u></string>

    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>

    <string name="input_password_error">Password must be atleast 8 characters.</string>
    <string name="input_email_error">Please use a proper email.</string>
    <string name="input_empty">This field cannot be blank.</string>

    <string name="login_title">Login to your Account!</string>
    <string name="register">Register</string>
    <string name="register_title">Let\'s create your own account!</string>
    <string name="close">Close</string>

    <string name="change_language">Change Language</string>
    <string name="logout">Log out</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>

    <string name="choose_picture">Please choose a picture first.</string>
    <string name="upload_error">Upload failed. Reason: %1s</string>
    <string name="login_error">Login failed. Reason: %1s</string>
    <string name="register_error">Register failed. Reason: %1s</string>
    <string name="upload_successful">Upload success!</string>
    <string name="empty_description">Description can\'t be empty.</string>

    <string name="register_successful">Register success, you can now login with your account!</string>

    <string name="network_error">Failed. Please check your internet connection and try again.</string>

    <string name="need_camera_permission">You need to allow camera permission to take a picture.</string>

    <string name="camerax_capture_error">Failed to take the picture.</string>
    <string name="camerax_init_error">Failed to open camera.</string>

    <string name="settings">Settings</string>
    <string name="story_feed">Story Feed</string>
    <string name="story_upload">Story Upload</string>
    <string name="story_detail">Story Detail</string>
    <string name="logout_successful">You have been logged out.</string>
    <string name="story_description">Say something!</string>

    <string name="story_feed_empty">Whoops, there is no story to show right now.</string>
    <string name="retry">Retry</string>

    <string name="location">Location</string>
    <string name="need_location_permission">You need to allow location permission to upload your location.</string>

    <string name="error">Error</string>
    <string name="location_generic_error">Could not retrieve location, please check your Location settings.</string>
</resources>